<resources>
    <string name="app_name">WhatsApp</string>
    <string name="logar">Logar</string>
    <string name="conta">Não tem conta? Cadastre-se</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="whatsapp_logo">whatsapp logo</string>
    <string name="novo_usu_rio">novo usuário</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="configura_es">Configurações</string>
    <string name="sair">Sair</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informe">Esse não é seu nome de usuário nem senha. Este nome ficará visivel para seus contatos do whatsapp.</string>
    <string name="sua_foto">Sua foto</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tipe_message">Digite uma mensagem</string>
</resources>